--- a/messaging-activemq/pom.xml
+++ b/messaging-activemq/pom.xml
@@ -139,7 +139,7 @@
 
         <dependency>
             <groupId>org.wildfly</groupId>
-            <artifactId>wildfly-clustering-jgroups-spi</artifactId>
+            <artifactId>wildfly-clustering-spi</artifactId>
         </dependency>
 
         <dependency>
@@ -199,7 +199,7 @@
         <dependency>
             <groupId>org.wildfly.core</groupId>
             <artifactId>wildfly-subsystem-test</artifactId>
-						<type>pom</type>
+            <type>pom</type>
             <scope>test</scope>
         </dependency>
     </dependencies>
